# TetrisC

./: CMakeLists.txt
src/: main.cpp
src/game/: animationController.cpp  blocks.cpp  blocksController.cpp  grid.cpp  movements.cpp  sidebar.cpp  song.cpp  songController.cpp  tetris.cpp
src/game/modules/: animationController.cppm  blocks.cppm  blocksController.cppm  grid.cppm  movements.cppm  sidebar.cppm  song.cppm  songController.cppm  tetris.cppm
